--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "devDependencies": {
         "css-loader": "^0.9.1",
         "style-loader": "^0.8.3",
+        "sass-loader": "^0.4.1",
         "jsx-loader": "^0.12.2",
         "react": "^0.12.2"
     }
