Added MongoDb, cells in a column highlight now

--- a/ripple.config
+++ b/ripple.config
@@ -23,6 +23,7 @@
     <Dependency Name="FubuMVC.StructureMap" Version="1.3.0.1710" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.3.0.278" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.1.0.183" Mode="Fixed" />
+    <Dependency Name="MongoDb" Version="1.7.1.4791" Mode="Float" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="4.0.0-alpha3" Mode="Fixed" />
