TypeCalculator is now using mongodb

--- a/ripple.config
+++ b/ripple.config
@@ -36,6 +36,7 @@
     <Dependency Name="Storyteller2" Version="2.0.0.46" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
+    <Dependency Name="xunit" Version="1.9.2" Mode="Fixed" />
   </Nugets>
   <Groups />
   <References>
