--- a/src/TypeCalculator/Web.config
+++ b/src/TypeCalculator/Web.config
@@ -9,6 +9,12 @@
     <system.web>
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
+
+  <appSettings>
+    <add key="MongoDbSettings.Url" value="mongodb://localhost:27017/"/>
+    <add key="MongoDbSettings.DatabaseName" value="localmongodb"/>
+    <add key="MongoDbSettings.ElementAttributesCollectionName" value="elementTypeAttributes"/>
+  </appSettings>
   
   <location path="Content" allowOverride="true">
     <system.web>
@@ -26,9 +32,6 @@
   </location>
   <location path="fubu-content">
     <system.web>
-      <authorization>
-        <deny users="*" />
-      </authorization>
     </system.web>
   </location>
 </configuration>
