--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "style-loader": "^0.8.3",
         "sass-loader": "^0.4.1",
         "jsx-loader": "^0.12.2",
-        "react": "^0.12.2"
+        "react": "^0.12.2",
+        "mongodb": "^1.4.34"
     }
 }
