--- a/src/TypeCalculator.Testing/ripple.dependencies.config
+++ b/src/TypeCalculator.Testing/ripple.dependencies.config
@@ -5,7 +5,9 @@ FubuMVC.Core
 FubuMVC.StructureMap
 FubuTestingSupport
 HtmlTags
+MongoDb
 NUnit
 RhinoMocks
 structuremap
 structuremap.automocking
+xunit
