--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-    "name": "TypeCalculator",
-    "version": "0.0.1",
-    "private": true,
-    "preferGlobal": true,
-    "devDependencies": {
-        "css-loader": "^0.9.1",
-        "style-loader": "^0.8.3",
-        "sass-loader": "^0.4.1",
-        "jsx-loader": "^0.12.2",
-        "react": "^0.12.2",
-        "mongodb": "^1.4.34"
-    }
+  "name": "TypeCalculator",
+  "version": "0.0.1",
+  "private": true,
+  "preferGlobal": true,
+  "devDependencies": {
+    "css-loader": "^0.9.1",
+    "style-loader": "^0.8.3",
+    "sass-loader": "^0.4.1",
+    "jsx-loader": "^0.12.2",
+    "react": "^0.12.2",
+    "mongodb": "^1.4.34",
+    "gulp": "~3.8.11",
+    "webpack": "~1.7.3",
+    "gulp-msbuild": "~0.2.8",
+    "gulp-shell": "~0.4.0",
+    "gulp-dotnet-assembly-info": "~0.1.10",
+    "mongoose": "~3.8.25",
+    "kerberos": "0.0.9"
+  }
 }
