--- a/src/TypeCalculator/TypeCalculator.csproj
+++ b/src/TypeCalculator/TypeCalculator.csproj
@@ -187,9 +187,7 @@
   <ItemGroup>
     <Content Include=".package-manifest" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\scripts\lib\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Content\scripts\typedropdown.jsx" />
   </ItemGroup>
