--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "preferGlobal": true,
   "devDependencies": {
     "css-loader": "^0.9.1",
-    "style-loader": "^0.8.3",
-    "sass-loader": "^0.4.1",
-    "jsx-loader": "^0.12.2",
-    "react": "^0.12.2",
-    "mongodb": "^1.4.34",
     "gulp": "~3.8.11",
-    "webpack": "~1.7.3",
+    "gulp-dotnet-assembly-info": "~0.1.10",
     "gulp-msbuild": "~0.2.8",
     "gulp-shell": "~0.4.0",
-    "gulp-dotnet-assembly-info": "~0.1.10",
+    "jsx-loader": "^0.12.2",
+    "kerberos": "0.0.9",
+    "mongodb": "^1.4.34",
     "mongoose": "~3.8.25",
-    "kerberos": "0.0.9"
+    "node-sass": "^3.7.0",
+    "react": "^0.12.2",
+    "sass-loader": "^3.2.0",
+    "webpack": "^1.13.1"
   }
 }
