--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^3.8.25",
     "node-sass": ">=3.7.0",
     "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
