--- a/src/TypeCalculator/Web.config
+++ b/src/TypeCalculator/Web.config
@@ -1,37 +1,41 @@
 <?xml version="1.0"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-    <system.web>
-        <compilation debug="true" targetFramework="4.0" />
-    </system.web>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation debug="true" targetFramework="4.5"/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
+  </system.web>
   <appSettings>
     <add key="MongoDbSettings.Url" value="mongodb://localhost:27017/"/>
     <add key="MongoDbSettings.DatabaseName" value="localmongodb"/>
     <add key="MongoDbSettings.ElementAttributesCollectionName" value="elementTypeAttributes"/>
   </appSettings>
-  
   <location path="Content" allowOverride="true">
     <system.web>
       <authorization>
-        <allow users="*" />
+        <allow users="*"/>
       </authorization>
     </system.web>
   </location>
   <location path="_content" allowOverride="true">
     <system.web>
       <authorization>
-        <allow users="*" />
+        <allow users="*"/>
       </authorization>
     </system.web>
   </location>
   <location path="fubu-content">
-    <system.web>
-    </system.web>
+    <system.web/>
   </location>
 </configuration>
