Project is in a working state with paket, minus ST

--- a/rakefile
+++ b/rakefile
@@ -10,7 +10,7 @@ require 'fuburake'
 		:copyright => 'Copyright 2013. All rights reserved.'
 	}
 	
-	sln.ripple_enabled = true
+	sln.ripple_enabled = false
 	sln.fubudocs_enabled = true
 end
 
@@ -18,11 +18,32 @@ task :npm_install do
     sh 'npm install'
 end
 
-task :default => ['ripple:restore']
+task :default => [':npm_install']
+
+
+namespace :st do
+  storytellerTestProjectName = 'EH.PBP.StoryTeller'
+  storytellerTestProjectPath = "src\\#{storytellerTestProjectName}"
+  storytellerPath = "packages\\Storyteller2\\tools\\ST.exe"
+  commonArgs = "--timeout 400 --profile Debug"
+  runCommandArgs = "--results-path st\\index.htm --config bin\\Debug\\#{storytellerTestProjectName}.dll.config"
+  runCommand = "#{storytellerPath} run #{storytellerTestProjectPath} #{runCommandArgs} #{commonArgs}"
+
+  task :open do
+    command = "#{storytellerPath} open #{storytellerTestProjectPath} #{commonArgs}"
+    sh(command)
+  end
+
+  task :run do
+    puts 'Starting Storyteller test run, results will show up in "st\\index.htm"'
+    sh(runCommand + (tc_build_number ? " --teamcity" : ""))
+  end
+
+  task :runRegression do
+    puts 'Starting Storyteller test run and running only Regression tests, results will show up in "st\\index.htm"'
+    command = "#{runCommand} --lifecycle Regression"
+    sh(command)
+  end
+end
 
 FubuRake::MvcApp.new({:directory => 'src/TypeCalculator', :name => 'typecalculator'})
-
-FubuRake::Storyteller.new({
-    :path => 'src/TypeCalculator.StoryTeller',
-    :compilemode => @solution.compilemode
-})
