--- a/src/TypeCalculator.StoryTeller/TypeCalculator.StoryTeller.csproj
+++ b/src/TypeCalculator.StoryTeller/TypeCalculator.StoryTeller.csproj
@@ -128,6 +128,11 @@
   <ItemGroup>
     <Folder Include="Tests\Main\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="geckodriver.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
