--- a/rakefile
+++ b/rakefile
@@ -25,7 +25,7 @@ FubuRake::Storyteller.new({
   :st_path => 'packages/Storyteller2/tools',
   :prefix => 'st',
   :timeout => '300',
-  :profile => 'chrome',
+  :profile => 'firefox',
    :compilemode => @solution.compilemode
 })
 
