Add Marten, all that's left is to run Postgresql

--- a/src/TypeCalculator/Web.config
+++ b/src/TypeCalculator/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -13,29 +13,33 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <compilation debug="true" targetFramework="4.6" />
+    <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
   <appSettings>
-    <add key="MongoDbSettings.Url" value="mongodb://localhost:27017/"/>
-    <add key="MongoDbSettings.DatabaseName" value="localmongodb"/>
-    <add key="MongoDbSettings.ElementAttributesCollectionName" value="elementTypeAttributes"/>
+    <add key="MongoDbSettings.Url" value="mongodb://localhost:27017/" />
+    <add key="MongoDbSettings.DatabaseName" value="localmongodb" />
+    <add key="MongoDbSettings.ElementAttributesCollectionName" value="elementTypeAttributes" />
+    <add key="MartenDbSettings.Url" value="localhost" />
+    <add key="MartenDbSettings.DatabaseName" value="localmongodb" />
+    <add key="MartenDbSettings.ElementAttributesCollectionName" value="elementTypeAttributes" />
   </appSettings>
   <location path="Content" allowOverride="true">
     <system.web>
       <authorization>
-        <allow users="*"/>
+        <allow users="*" />
       </authorization>
     </system.web>
   </location>
+    
   <location path="_content" allowOverride="true">
     <system.web>
       <authorization>
-        <allow users="*"/>
+        <allow users="*" />
       </authorization>
     </system.web>
   </location>
   <location path="fubu-content">
-    <system.web/>
+    <system.web />
   </location>
 </configuration>
