Marten works now

--- a/src/TypeCalculator/Web.config
+++ b/src/TypeCalculator/Web.config
@@ -21,7 +21,7 @@
     <add key="MongoDbSettings.DatabaseName" value="localmongodb" />
     <add key="MongoDbSettings.ElementAttributesCollectionName" value="elementTypeAttributes" />
     <add key="MartenDbSettings.Url" value="localhost" />
-    <add key="MartenDbSettings.DatabaseName" value="localmongodb" />
+    <add key="MartenDbSettings.DatabaseName" value="TypeCalculatorDB" />
     <add key="MartenDbSettings.ElementAttributesCollectionName" value="elementTypeAttributes" />
   </appSettings>
   <location path="Content" allowOverride="true">
